# rest-against-humanity

./: .envrc  .gitignore  .gitrestore  .npmrc  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  app.py  cards.json  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  serverless.yml  vercel.json  versions.json
.cache/plugin/git-committers/: page-authors.json
.github/workflows/: build.yml  deploy.yml  freeze.yml  push.yml  scrape.yml
1.0/: 404.html  index.html  sitemap.xml
1.0/license/: index.html
1.0/search/: search_index.json
1.x/: 404.html  index.html  sitemap.xml
1.x/search/: search_index.json
2.0/: 404.html  index.html  sitemap.xml
2.0/license/: index.html
2.x/: 404.html  index.html  sitemap.xml
2.x/search/: search_index.json
Version 2/: index.html
api/: __init__.py  app.py  cards.json  index.py  requirements.txt
api/graphql/: __init__.py  app.py  models.py
api/graphql/schema/: inputs.py  types.py
api/v1/: __init__.py  app.py
api/v2/: __init__.py  app.py  models.py
ci/: version.py
docs/: index.md  index.mdx  license.md
docs/.overrides/: 404.html
docs/.overrides/partials/: copyright.html
docs/.scripts/: build.py
docs/assets/stylesheets/: admonitions.css
docs/graphql/: index.md
docs/versions/: versions.toml
docs/versions/1.x/: mkdocs.yml
docs/versions/1.x/docs/: index.md
docs/versions/2.x/docs/: index.md
docs/versions/gql/docs/: .overrides  index.md
docs/versions/graphql/docs/: index.md
gql/: 404.html  index.html  sitemap.xml
gql/search/: search_index.json
graphql/: 404.html  index.html  sitemap.xml
graphql/search/: search_index.json
latest/: 404.html  index.html
latest/assets/stylesheets/: extra.css
latest/search/: search_index.json
scripts/: build.py
site/: index.html  sitemap.xml
site/license/: index.html
site/search/: search_index.json
src/: app.py
v1/: index.html  sitemap.xml
v1/search/: search_index.json
v2/: 404.html  sitemap.xml
v2/search/: search_index.json
website/: docsearch.config.json  docusaurus.config.js  package-lock.json  package.json  vercel.json
website/api/: index.py  requirements.txt
website/api/v2/: __init__.py
website/docs/: index.mdx  license.md
website/src/pages/: docs.tsx  index.tsx
website/src/theme/: NotFound.js
website/versioned_docs/version-1.0.0/: index.mdx
website/versioned_docs/version-2.0.0/: index.mdx
