[tool.poetry]
name = "rest-against-humanity"
version = "2.2.0"
description = "A public API for Cards Against Humanity"
authors = ["celsius narhwal <celsiusnarhwal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
pydantic = "^1.10.7"
ujson = "^5.7.0"
strawberry-graphql = { extras = ["fastapi"], version = "0.176.3" }

[tool.poetry.group.dev.dependencies]
doppler-env = "^0.3.1"
poethepoet = "^0.19.0"
pyperclip = "^1.8.2"
rich-tracebacks = "^1.2.1"
shtab = "^1.6.1"
uvicorn = "^0.20.0"

[tool.poetry.group.docs.dependencies]
cairosvg = "^2.7.0"
iconoclast = "^2.0.1"
path = "^16.6.0"
pillow = "^9.4.0"
poethepoet = "^0.19.0"
pydantic = "^1.10.7"
pygments-graphql = "^1.0.0"
tomlkit = "^0.11.8"
fontawesomepro = { version = "^6.4.0", source = "fontawesome" }
mike = { git = "https://github.com/jimporter/mike" }
mkdocs-material = { git = "https://github.com/squidfunk/mkdocs-material-insiders" }

[tool.poetry.group.repl.dependencies]
ipython = "^8.11.0"

[[tool.poetry.source]]
name = "fontawesome"
url = "https://dl.fontawesome.com/${FONTAWESOME_PKG_TOKEN}/fontawesome-pro/python/simple"
secondary = true

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.poe.tasks]
clear = "rm -rf site .cache"
docs = { shell = "mkdocs serve" }
export = "poetry export -f requirements.txt -o api/requirements.txt"
format = { shell = "for hook in black prettier isort; do pre-commit run $hook --all-files; done" }

[tool.poe.tasks.build]
script = "scripts.build:build"

[[tool.poe.tasks.build.args]]
name = "branch"
options = ["--branch"]
type = "string"
default = "__random__"

[[tool.poe.tasks.build.args]]
name = "push"
options = ["--push"]
type = "boolean"
default = false

[[tool.poe.tasks.build.args]]
name = "debug"
options = ["--debug"]
type = "boolean"
default = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
